<resources>
    <string name="app_name">Mad Level 1 Task 2</string>
    <string name="T">T</string>
    <string name="F">F</string>
    <string name="conj">Conjunction (AND)</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="AB">A ^ B</string>
    <string name="submit">Submit</string>
    <string name="score">"Your score is = "</string>
    <string name="error">Fill all fields in correctly!</string>

</resources>