<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="114dp"
        android:text="@string/conj"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="326dp"
        android:layout_height="477dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="81dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="81dp"
            android:layout_marginBottom="33dp"
            android:text="@string/AB"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tbFirst"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tbFirst"
            android:layout_width="99dp"
            android:layout_height="40dp"
            android:layout_marginEnd="53dp"
            android:layout_marginBottom="35dp"
            android:digits="TF"
            android:ems="10"
            android:inputType="text"
            android:maxLength="1"
            app:layout_constraintBottom_toTopOf="@+id/tbSecond"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/tbSecond"
            android:layout_width="99dp"
            android:layout_height="40dp"
            android:layout_marginEnd="53dp"
            android:layout_marginBottom="29dp"
            android:digits="TF"
            android:ems="10"
            android:inputType="text"
            android:maxLength="1"
            app:layout_constraintBottom_toTopOf="@+id/tbThird"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/tbThird"
            android:layout_width="99dp"
            android:layout_height="40dp"
            android:layout_marginEnd="53dp"
            android:layout_marginBottom="23dp"
            android:digits="TF"
            android:ems="10"
            android:inputType="text"
            android:maxLength="1"
            app:layout_constraintBottom_toTopOf="@+id/tbFourth"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/tbFourth"
            android:layout_width="99dp"
            android:layout_height="40dp"
            android:layout_marginEnd="53dp"
            android:layout_marginBottom="151dp"
            android:digits="TF"
            android:ems="10"
            android:inputType="text"
            android:maxLength="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="33dp"
            android:text="@string/B"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvBFirst"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="33dp"
            android:text="@string/A"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvAFirst"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvBFourth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="57dp"
            android:layout_marginBottom="161dp"
            android:text="@string/F"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tbFourth" />

        <TextView
            android:id="@+id/tvAFourth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="161dp"
            android:text="@string/F"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvAThird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="33dp"
            android:text="@string/F"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@+id/tvAFourth"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvBSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="58dp"
            android:layout_marginBottom="39dp"
            android:text="@string/F"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@+id/tvBThird"
            app:layout_constraintEnd_toStartOf="@+id/tbSecond" />

        <TextView
            android:id="@+id/tvBThird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="57dp"
            android:layout_marginBottom="33dp"
            android:text="@string/T"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@+id/tvBFourth"
            app:layout_constraintEnd_toStartOf="@+id/tbThird" />

        <TextView
            android:id="@+id/tvASecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginBottom="39dp"
            android:text="@string/T"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@+id/tvAThird"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvBFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="57dp"
            android:layout_marginBottom="46dp"
            android:text="@string/T"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@+id/tvBSecond"
            app:layout_constraintEnd_toStartOf="@+id/tbFirst" />

        <TextView
            android:id="@+id/tvAFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginBottom="46dp"
            android:text="@string/T"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@+id/tvASecond"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="115dp"
            android:layout_marginEnd="123dp"
            android:layout_marginBottom="52dp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>